Project

General

Profile

Actions

Bug #22730

closed

mds: scrub crash

Added by dongdong tao about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
1 - critical
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

this crash can be reproduced by 2 steps

1 ceph daemon mds.a scrub_path <dir> recursive
2 ceph daemon mds.a scrub_path <dir> force

crash stack:
2018-01-18 22:52:44.662 7efc3379f700 20 mds.0.cache.ino(0x1) scrub_finished
2018-01-18 22:52:44.662 7efc3379f700 1 mds.0.cache.ino(0x1) 9 != 0
2018-01-18 22:52:44.706 7efc3379f700 -1 /mnt/MyGitPrj/ceph/src/mds/CInode.cc: In function 'void CInode::scrub_finished(MDSInternalContextBase**)' thread 7efc3379f700 time 2018-01-18 22:52:44.668927
/mnt/MyGitPrj/ceph/src/mds/CInode.cc: 4530: FAILED assert(i
>second.last_scrub_version == i->second.scrub_start_version)

ceph version 13.0.0-4794-ga3e9911 (a3e9911b841f553517c8f514f6a130a5b5df9a75) mimic (dev)
1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x137) [0x7efc4178c350]
2: (CInode::scrub_finished(MDSInternalContextBase**)+0x3ec) [0x5589393fb99c]
3: (ScrubStack::_validate_inode_done(CInode*, int, CInode::validated_data const&)+0x6af) [0x55893942fd63]
4: (C_InodeValidated::finish(int)+0x35) [0x558939431063]
5: (Context::complete(int)+0x27) [0x558939089cb3]
6: (MDSInternalContextBase::complete(int)+0x16f) [0x5589394712f3]
7: (()+0xa69e3b) [0x5589393f8e3b]
8: (Continuation::continue_function(int, int)+0xc5) [0x5589393ff75d]
9: (Continuation::Callback::finish(int)+0x2b) [0x5589393ff299]
10: (Context::complete(int)+0x27) [0x558939089cb3]
11: (MDSInternalContextWrapper::finish(int)+0x33) [0x558939471353]
12: (Context::complete(int)+0x27) [0x558939089cb3]
13: (MDSInternalContextBase::complete(int)+0x16f) [0x5589394712f3]
14: (CInode::_fetched(ceph::buffer::list&, ceph::buffer::list&, Context*)+0x8f9) [0x5589393df119]
15: (C_IO_Inode_Fetched::finish(int)+0x40) [0x5589393fff3a]
16: (Context::complete(int)+0x27) [0x558939089cb3]

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #22864: luminous: mds: scrub crashResolvedPrashant DActions
Copied to CephFS - Backport #22865: jewel: mds: scrub crashResolvedPrashant DActions
Actions #1

Updated by Patrick Donnelly about 6 years ago

  • Assignee set to Douglas Fuller
  • Priority changed from Normal to High
  • Component(FS) MDS added

Doug, please take a look at this one.

Actions #2

Updated by Patrick Donnelly about 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee deleted (Douglas Fuller)
  • Backport set to luminous,jewel
Actions #3

Updated by Patrick Donnelly about 6 years ago

  • Assignee set to dongdong tao
Actions #4

Updated by Patrick Donnelly about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler about 6 years ago

Actions #6

Updated by Nathan Cutler about 6 years ago

Actions #7

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF