mds: fix scrub crash

Fixes: http://tracker.ceph.com/issues/22730
Signed-off-by: dongdong tao <tdd21151186@gmail.com>
(cherry picked from commit e741c1a6e16cb5179d623ef491f66d31b0ffdfd6)